Communication Page Work -Fix MedicalFormCard currentTab issue -Add Communication Filter -Fix  visible state issue of toolbar  in Communication Props

--- a/apps/web/pages/setup/communication/index.module.less
+++ b/apps/web/pages/setup/communication/index.module.less
@@ -33,3 +33,7 @@
       flex-direction: column;
     }
   }
+
+  .ant-tabs-tab.ant-tabs-tab-active {
+    background-color: transparent;
+  }
